# opencollectivites

./: .coveragerc  .env.sample  .gitattributes  .gitignore  .gitmodules  INSTALL.md  Pipfile  README.md  feeds  francesubdivisions  gunicorn_start.sh  gunicorn_start.sh.sample  manage.py  pyproject.toml  requirements.txt  settings_local.py.sample  settings_local_sample.py  update.sh
.github/workflows/: codeql-analysis.yml  django.yml
aspic/: api.py  apps.py  router.py  serializers.py  urls.py  utils.py  views.py
aspic/migrations/: 0001_initial.py
aspic/models/: __init__.py  c_geofla.py  postgis.py  r_datastructure.py  t_aspic_arrondissements.py  t_aspic_cantons.py  t_aspic_communes.py  t_aspic_departements.py  t_aspic_interco_evenements.py  t_aspic_interco_liaison.py  t_aspic_interco_meta.py  t_aspic_intercommunalites.py  t_aspic_other.py  t_aspic_regions.py
bnsp/: admin.py  apps.py  models.py  tests.py
bnsp/migrations/: 0001_initial.py  0002_auto_20210909_1607.py  0003_alter_query_query.py  0004_rename_live_query_is_active.py  0005_auto_20211008_1438.py  0006_auto_20211008_1544.py
bnsp/services/: gallica_search_api.py
bnsp/tests/: test_services_gallica_search_api.py  tests_models.py
collectivity_pages/: admin.py  apps.py  models.py
collectivity_pages/fixtures/: init.json
collectivity_pages/migrations/: 0001_initial.py  0002_auto_20211130_1204.py  0003_vintage.py  0004_auto_20211207_1005.py
collectivity_pages/services/: communes.py  context_data.py  departements.py  epcis.py  regions.py  utils.py
config/: api.py  apps.py  asgi.py  settings.py  settings_local_sample.py  urls.py  wsgi.py
core/: admin.py  api.py  apps.py  context_processors.py  models.py  schemas.py  urls.py  views.py
core/fixtures/: francedata-mappings.json  init.json
dashboard/: models.py  wagtail_hooks.py
devops/: .env.sample  backup.sh  gunicorn.service.sample  gunicorn_start.sh  restart.sh  start.sh  stop.sh  update.sh
docs/: logo.excalidraw  oc-app-schema.excalidraw
dsfr/: tests.py  utils.py
external_apis/: abstract.py  admin.py  apps.py  models.py
francedata/: admin.py  api.py  apps.py  schemas.py
francesubdivisions/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
oc_back/: manage.py
oc_front/: manage.py
ocback/: admin.py  apps.py  models.py
ocfront/: apps.py  views.py
opencollectivites/: asgi.py  settings.py  urls.py  wsgi.py
pages/: blocks.py  models.py
submodules/: README.md
(+273 files in other folders)
