[tool.poetry]
name = "opencollectivites"
version = "0.10.0"
description = "Open Collectivités is a web portal aiming at giving an easy access to statistical data about French local collectivities."
authors = ["Sylvain Boissel <sylvain.boissel@dgcl.gouv.fr>"]
license = "AGPL-3"

[tool.poetry.dependencies]
python = "^3.8"
dateparser = "^1.0.0"
Django = "^3.2.7"
feedparser = "^6.0.8"
beautifulsoup4 = "^4.9.3"
requests = "^2.26.0"
pyRFC3339 = "^1.1"
Pillow = "^8.3.2"
python-stdnum = "^1.16"
psycopg2-binary = "^2.9.1"
django-cors-headers = "^3.8.0"
Unidecode = "^1.2.0"
openpyxl-dictreader = "^0.1.3"
xlrd = "^2.0.1"
gunicorn = "^20.1.0"
django-ninja = "^0.14.0"
Babel = "^2.9.1"
django-analytical = "^3.0.0"
django-dsfr = "^0.2.0"
wagtail-markdown = "^0.7.0"
wagtailsvg = "^0.0.20"
xmltodict = "^0.12.0"
django-francedata = "^0.9.1"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
pylint = "^2.10.2"
coverage = "^5.5"
mock = "^4.0.3"
requests-mock = "^1.9.3"
responses = "^0.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
